<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="gone" >

    <ImageButton
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:background="@android:color/transparent"
        android:contentDescription="@+strings/btnClose"
        android:onClick="onButtonClick"
        android:src="@drawable/cancel" />

    <ImageView
        android:id="@+id/test_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/cancel" 
        android:visibility="invisible"/>

    <view
        android:id="@+id/OverlayView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        class="com.example.arontandrix.OverlayView" />

    <LinearLayout
        android:id="@+id/buttonBar"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="10dp"
        android:orientation="vertical" >

        <Button
            android:id="@+id/resetButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:longClickable="true"
            android:onClick="onResetButtonClick"
            android:text="@string/btnReset" />

        <Button
            android:id="@+id/u2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:longClickable="true"
            android:onClick="onU2ButtonClick"
            android:text="@string/button_u2" />

        <Button
            android:id="@+id/u1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:longClickable="true"
            android:onClick="onU1ButtonClick"
            android:text="@string/button_u1" />

        <Button
            android:id="@+id/R"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:longClickable="true"
            android:onClick="onRButtonClick"
            android:text="@string/button_r" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttonBar1"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="10dp"
        android:orientation="vertical" >

        <Button
            android:id="@+id/oc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:longClickable="true"
            android:onClick="onOCButtonClick"
            android:text="@string/button_OC" />

        <Button
            android:id="@+id/d2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:longClickable="true"
            android:onClick="onD2ButtonClick"
            android:text="@string/button_d2" />

        <Button
            android:id="@+id/d1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:longClickable="true"
            android:onClick="onD1ButtonClick"
            android:text="@string/button_d1" />

        <Button
            android:id="@+id/L"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:longClickable="true"
            android:onClick="onLButtonClick"
            android:text="@string/button_l" />
    </LinearLayout>

</RelativeLayout>